# api.yaml
@@ -12,12 +12,21 @@ paths:
       description: Search for sitting spots on external db and internal data layer, updating the dl with new entries
       operationId: searchSittingSpots
       parameters:
-        - name: location
+        - name: x
           in: query
-          description: General position of the search
           required: true
           schema:
-            $ref: '#/components/schemas/Area'
+            type: number
+        - name: y
+          in: query
+          required: true
+          schema:
+            type: number
+        - name: area
+          in: query
+          required: true
+          schema:
+            type: number
         - name: tags
           in: query
           description: Tags of the sitting spot
